Fix typo in NetworkProcess::acquireLockedFileGrant() https://bugs.webkit.org/show_bug.cgi?id=268327

Reviewed by Per Arne Vollan.

* Source/WebKit/NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::setIsHoldingLockedFiles):
* Source/WebKit/NetworkProcess/NetworkProcess.h:
* Source/WebKit/NetworkProcess/cocoa/NetworkProcessCocoa.mm:
(WebKit::NetworkProcess::acquireLockedFileGrant):
(WebKit::NetworkProcess::aqcuireLockedFileGrant): Deleted.

Canonical link: https://commits.webkit.org/273704@main