Source/WebKit/NetworkProcess/cocoa/NetworkProcessCocoa.mm
@@ -257,7 +257,7 @@ void NetworkProcess::setProxyConfigData(PAL::SessionID sessionID, Vector<std::pa
 #endif // HAVE(NW_PROXY_CONFIG)
 
 #if USE(RUNNINGBOARD) && USE(EXTENSIONKIT)
-bool NetworkProcess::aqcuireLockedFileGrant()
+bool NetworkProcess::acquireLockedFileGrant()
 {
     m_holdingLockedFileGrant = [WKProcessExtension.sharedInstance grant:@"com.apple.common" name:@"FinishTaskInterruptable"];
     if (m_holdingLockedFileGrant)
